solving overflow issue on toolbar

--- a/src/styles/toolbar.css
+++ b/src/styles/toolbar.css
@@ -32,7 +32,7 @@
       display: flex;
       align-content: center;
       margin: 0;
-      max-width: calc(100% - 35px);
+      width: calc(100% - 5px);
     }
   }
 
